feat: When rename does nothing, notify it with a message
Fixes #217

Signed-off-by: azerr <azerr@redhat.com>